# qcr

./: .gitignore  CMakeLists.txt  build.bat  bytes.c  bytes.h  compile.bat  grx.c  grx.h  icon.rc  ma.h  main.c  per_vertex_colors.frag  readme  resource.h  shader.frag  surface.c  surface.h
